Current:
Ryan C. Gordon (icculus.org) - Mon Apr 14 00:26:11 EDT 2003
 * Fixed DNS lookups and some other stuff in network.c.
Stephane Peter (Codehost) - Thu Apr  3 19:31:16 PST 2003
 * Ported to Solaris 8 on Intel.
Stephane Peter (Codehost) - Mon Mar 31 19:26:17 PST 2003
 * Added support for per-component uninstall scripts.
 * Added per-component uninstall messages.
Stephane Peter (Codehost) - Tue Feb 11 20:33:32 PST 2003
 * Added the 'environment' tag to store the values of
   environment variables.
Ryan C. Gordon (icculus.org) - Tue Jan 14 23:46:31 EST 2003
 * Committed initial MacOS X patches to CVS on behalf of Jon C.
Stephane Peter (Codehost) - Fri Dec  6 16:31:27 PST 2002
 * Do not display the main GTK dialog until we're done with the EULAs.
 * Various fixes for menu items
Ryan C. Gordon (Epic Games) - Sat Nov 30 12:09:47 EST 2002
 * Significant reduction in bandwidth for console_ui...makes this usable
   on terminals over dialup.
Ryan C. Gordon (Epic Games) - Sun Nov 10 19:55:35 EST 2002
 * Corrected typo in configure.in (thanks, zakk!)
Ryan C. Gordon (icculus.org) - Thu Sep 19 17:05:48 EDT 2002
 * console_ui.c now respects $PAGER environment var.
Stephane Peter (Codehost) - Fri Sep 20 15:46:23 PDT 2002
 * Added --disable-dialog flag to configure script to
   avoid compiling the dialog UI in if necesary.
Stephane Peter (Codehost) - Thu Sep 26 18:38:02 PDT 2002
 * Added 'tag' tag for <option>, and have SETUP_OPTIONTAGS environment
   variable in scripts to be able to determine the set of user options.
Stephane Peter (Codehost) - Wed Oct  9 17:46:25 PDT 2002
 * Preliminary AIX 5.1 port
Stephane Peter (Codehost) - Fri Oct 18 16:26:18 PDT 2002
 * Deprecated 'nobinaries' tag.
Stephane Peter (Codehost) - Mon Nov 11 16:05:01 PST 2002
 * Added 'mode' attribute to binaries and files tag so that permissions
   can be explicitly specified.
John Quigley -  Tue, 19 Nov 2002 19:15:01 -0800
 * Various fixes for Redhat 8.0 menu items.


1.6.1: